changed mr-titles so that titles are no longer cut off

--- a/app/assets/styles/lightbox/minireel.css
+++ b/app/assets/styles/lightbox/minireel.css
@@ -154,7 +154,7 @@
         }
 
         .mr-title {
-            font-size:1.5em; font-weight:normal; color:#fff; line-height:1; text-align: center;
+            font-size:1.5em; font-weight:normal; color:#fff; line-height:1.4; text-align: center;
             margin:0; width:100%;
             position:absolute; top:-1.5em;
             white-space: nowrap;
